# flux_t

./: CMakeLists.txt  LICENSE  README.md
examples/: hello_flux.cpp
include/flux_t/: flux_continuum.hpp  flux_core.hpp  flux_lens.hpp  flux_pulse.hpp  flux_system.hpp  flux_valve.hpp  flux_wave.hpp
tests/affinity/: test_thread_affinity.cpp
tests/benchmark/: bench_throughput.cpp
tests/pulse/: test_pulse_dispatch.cpp
tests/reaction/: test_reaction_lifecycle.cpp
tests/routing/: test_deterministic_routing.cpp
tests/stress/: test_stress_1M_pulses.cpp
tests/topology/: test_raii_construction.cpp
tests/valve/: test_valve_open_close.cpp
